# reqres-qa-automation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
clients/: api_client.py  api_mock.py
config/: settings.py
models/: auth.py  user.py
tests/: conftest.py  test_delete_users.py  test_get_users.py  test_mock_errors.py  test_negative.py  test_post_users.py  test_put_patch_users.py  test_smoke.py
utils/: assertions.py
